--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="title_screen_text">My Media List</string>
     <string name="start_button_text">Start</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add_button_text">Add</string>
+    <string name="remove_button_text">Remove</string>
 </resources>
