--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add_button_text">Add</string>
     <string name="remove_button_text">Remove</string>
+    <string name="title">Title</string>
+    <string name="dialog_properties_title">More options</string>
+    <string name="seen_on">"Last seen on: "</string>
+    <string name="release_year">"Release year: "</string>
+    <string name="description_text">"Description: "</string>
 </resources>
