Added dialog box after clicking the recycler view item

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="seen_on">"Last seen on: "</string>
     <string name="release_year">"Release year: "</string>
     <string name="description_text">"Description: "</string>
+    <string name="edit_text">Edit...</string>
+    <string name="ok_button_text">OK</string>
 </resources>
