--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="add_button_text">Add</string>
+    <string name="add_button_text">Search</string>
     <string name="remove_button_text">Remove</string>
     <string name="title">Title</string>
     <string name="dialog_properties_title">More options</string>
