--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="statistics_header_text" >Select dates:</string>
     <string name="from_text_view">From:</string>
     <string name="from_date_button_text">Set from date</string>
-    <string name="to_text_view">To</string>
+    <string name="to_text_view">To:</string>
     <string name="to_date_button">Set to date</string>
     <string name="number_of_movies_info" >Number of movies watched during this period:</string>
 </resources>
